# frog-protocols

./: LICENSE.md  README.md  frog-protocols-uninstalled.pc.in  frog-protocols.pc.in  meson.build
assets/: logo.kra
frog-protocols/: frog-fifo-v1.xml
scripts/: signRelease.sh
